--- a/sources/css/storybookPlus.scss
+++ b/sources/css/storybookPlus.scss
@@ -62,6 +62,10 @@ p {
         padding: rem( 100px ) rem( 200px );
     }
     
+    #profile {
+        height: rem( 400px );
+    }
+    
     #note {
         display: none;
     }
@@ -204,6 +208,10 @@ p {
     
     #toc {
         display: none;
+    }
+    
+    #profile {
+        height: rem( 546px );
     }
     
 }
