Expand/contract is disabled in mini mode

--- a/sources/css/storybookPlus.scss
+++ b/sources/css/storybookPlus.scss
@@ -74,6 +74,15 @@ p {
         height: rem( 400px );
     }
     
+    #control {
+        
+        #currentStatus {
+            width: 80%;
+            border-right: none;
+        }
+        
+    }
+    
 }
 
 #storybook_plus_wrapper.withQuiz {
