--- a/sources/videoplayer/video-js.css
+++ b/sources/videoplayer/video-js.css
@@ -1,11 +1,8 @@
 /*!
 Video.js Default Styles (http://videojs.com)
-Version 4.2.0
+Version 4.8.1
 Create your own skin at http://designer.videojs.com
 */
-
-@import "videojs.progressTips.min.css";
-
 /* SKIN
 ================================================================================
 The main class name for all skin-specific styles. To make your own skin,
@@ -14,7 +11,7 @@ skin name to your video tag instead of the default skin.
 e.g. <video class="video-js my-skin-name">
 */
 .vjs-default-skin {
-  color: #fafafa;
+  color: #ffffff;
 }
 /* Custom Icon Font
 --------------------------------------------------------------------------------
@@ -24,11 +21,10 @@ The control icons are from a custom font. Each icon corresponds to a character
 @font-face {
   font-family: 'VideoJS';
   src: url('font/vjs.eot');
-  src: url('font/vjs.eot?#iefix') format('embedded-opentype'), url('font/vjs.ttf') format('truetype');
+  src: url('font/vjs.eot?#iefix') format('embedded-opentype'), url('font/vjs.woff') format('woff'), url('font/vjs.ttf') format('truetype'), url('font/vjs.svg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
-/*e008*/
 /* Base UI Component Classes
 --------------------------------------------------------------------------------
 */
@@ -61,8 +57,6 @@ The control icons are from a custom font. Each icon corresponds to a character
   font-size: 1em;
   line-height: 1;
   text-align: center;
-  /*text-shadow: 0em 0em 1em #fff;*/
-
   position: absolute;
   top: 0;
   left: 0;
@@ -124,6 +118,10 @@ The default control bar that is a container for most of the controls.
 .vjs-default-skin.vjs-using-native-controls .vjs-control-bar {
   display: none;
 }
+/* The control bar shouldn't show after an error */
+.vjs-default-skin.vjs-error .vjs-control-bar {
+  display: none;
+}
 /* IE8 is flakey with fonts, and you have to change the actual content to force
 fonts to show/hide properly.
   - "\9" IE8 hack didn't work for this
@@ -160,9 +158,7 @@ fonts to show/hide properly.
 /* Replacement for focus outline */
 .vjs-default-skin .vjs-control:focus:before,
 .vjs-default-skin .vjs-control:hover:before {
-  /*text-shadow: 0em 0em 1em rgba(255, 255, 255, 1);*/
-
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  text-shadow: 0em 0em 0.8em #ffffff;
 }
 .vjs-default-skin .vjs-control:focus {
   /*  outline: 0; */
@@ -195,6 +191,24 @@ fonts to show/hide properly.
 .vjs-default-skin.vjs-playing .vjs-play-control:before {
   content: "\e002";
 }
+/* Playback toggle
+--------------------------------------------------------------------------------
+*/
+.vjs-default-skin .vjs-playback-rate .vjs-playback-rate-value {
+  font-size: 1.5em;
+  line-height: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+.vjs-default-skin .vjs-playback-rate.vjs-menu-button .vjs-menu .vjs-menu-content {
+  width: 4em;
+  left: -2em;
+  list-style: none;
+}
 /* Volume/Mute
 -------------------------------------------------------------------------------- */
 .vjs-default-skin .vjs-mute-control,
@@ -224,7 +238,7 @@ fonts to show/hide properly.
 }
 .vjs-default-skin .vjs-volume-bar {
   width: 5em;
-  height: 0.5em;
+  height: 0.6em;
   margin: 1.1em auto 0;
 }
 .vjs-default-skin .vjs-volume-menu-button .vjs-menu-content {
@@ -235,11 +249,19 @@ fonts to show/hide properly.
   top: 0;
   left: 0;
   height: 0.5em;
+  /* assuming volume starts at 1.0 */
+
+  width: 100%;
   background: #66a8cc;
 }
 .vjs-default-skin .vjs-volume-bar .vjs-volume-handle {
   width: 0.5em;
   height: 0.5em;
+  /* Assumes volume starts at 1.0. If you change the size of the
+     handle relative to the volume bar, you'll need to update this value
+     too. */
+
+  left: 4.5em;
 }
 .vjs-default-skin .vjs-volume-handle:before {
   font-size: 0.9em;
@@ -291,12 +313,16 @@ fonts to show/hide properly.
 }
 /* Progress Bars */
 .vjs-default-skin .vjs-progress-holder .vjs-play-progress,
-.vjs-default-skin .vjs-progress-holder .vjs-load-progress {
+.vjs-default-skin .vjs-progress-holder .vjs-load-progress,
+.vjs-default-skin .vjs-progress-holder .vjs-load-progress div {
   position: absolute;
   display: block;
   height: 100%;
   margin: 0;
   padding: 0;
+  /* updated by javascript during playback */
+
+  width: 0;
   /* Needed for IE6 */
   left: 0;
   top: 0;
@@ -315,7 +341,13 @@ fonts to show/hide properly.
 }
 .vjs-default-skin .vjs-load-progress {
   background: #646464 /* IE8- Fallback */;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.2);
+}
+/* there are child elements of the load progress bar that represent the
+   specific time ranges that have been buffered */
+.vjs-default-skin .vjs-load-progress div {
+  background: #787878 /* IE8- Fallback */;
+  background: rgba(255, 255, 255, 0.1);
 }
 .vjs-default-skin .vjs-seek-handle {
   width: 1.5em;
@@ -323,6 +355,25 @@ fonts to show/hide properly.
 }
 .vjs-default-skin .vjs-seek-handle:before {
   padding-top: 0.1em /* Minor adjustment */;
+}
+/* Live Mode
+--------------------------------------------------------------------------------
+*/
+.vjs-default-skin.vjs-live .vjs-time-controls,
+.vjs-default-skin.vjs-live .vjs-time-divider,
+.vjs-default-skin.vjs-live .vjs-progress-control {
+  display: none;
+}
+.vjs-default-skin.vjs-live .vjs-live-display {
+  display: block;
+}
+/* Live Display
+--------------------------------------------------------------------------------
+*/
+.vjs-default-skin .vjs-live-display {
+  display: none;
+  font-size: 1em;
+  line-height: 3em;
 }
 /* Time Display
 --------------------------------------------------------------------------------
@@ -374,7 +425,7 @@ easily in the skin designer. http://designer.videojs.com/
   /* Center it vertically */
   top: 50%;
   margin-top: -1em;
-  font-size: 2em;
+  font-size: 1.8em;
   display: block;
   z-index: 2;
   position: absolute;
@@ -388,7 +439,7 @@ easily in the skin designer. http://designer.videojs.com/
   /* background-color-with-alpha */
   background-color: #006dcc;
   background-color: rgba(0, 109, 204, 0.7);
-  border: 0em solid #3b4249;
+  border: 0 solid #3b4249;
   /* border-radius */
   -webkit-border-radius: 0.3em;
   -moz-border-radius: 0.3em;
@@ -402,6 +453,15 @@ easily in the skin designer. http://designer.videojs.com/
   -moz-transition: all 0.4s;
   -o-transition: all 0.4s;
   transition: all 0.4s;
+}
+/* Optionally center */
+.vjs-default-skin.vjs-big-play-centered .vjs-big-play-button {
+  /* Center it horizontally */
+  left: 50%;
+  margin-left: -2em;
+  /* Center it vertically */
+  top: 50%;
+  margin-top: -1em;
 }
 /* Hide if controls are disabled */
 .vjs-default-skin.vjs-controls-disabled .vjs-big-play-button {
@@ -419,13 +479,14 @@ easily in the skin designer. http://designer.videojs.com/
 .vjs-default-skin:hover .vjs-big-play-button,
 .vjs-default-skin .vjs-big-play-button:focus {
   outline: 0;
-  border-color: #fff;
+  border-color: #006dcc;
   /* IE8 needs a non-glow hover state */
-  /*background-color: rgb(80, 80, 80);
-  background-color: rgba(50, 50, 50, 0.75);*/
-
-  /*.box-shadow(0 0 3em #fff);*/
-
+  background-color: #505050;
+  background-color: rgba(50, 50, 50, 0.75);
+  /* box-shadow */
+  -webkit-box-shadow: 0 0 3em #ffffff;
+  -moz-box-shadow: 0 0 3em #ffffff;
+  box-shadow: 0 0 3em #ffffff;
   /* transition */
   -webkit-transition: all 0s;
   -moz-transition: all 0s;
@@ -439,37 +500,103 @@ easily in the skin designer. http://designer.videojs.com/
      to the same as the button height */
 
   line-height: 2em;
-  /*text-shadow: 0.05em 0.05em 0.1em #000;*/
-
+  text-shadow: 0.05em 0.05em 0.1em #000;
   text-align: center /* Needed for IE8 */;
   position: absolute;
   left: 0;
   width: 100%;
   height: 100%;
 }
+.vjs-error .vjs-big-play-button {
+  display: none;
+}
+/* Error Display
+--------------------------------------------------------------------------------
+*/
+.vjs-error-display {
+  display: none;
+}
+.vjs-error .vjs-error-display {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+.vjs-error .vjs-error-display:before {
+  content: 'X';
+  font-family: Arial;
+  font-size: 4em;
+  color: #666666;
+  /* In order to center the play icon vertically we need to set the line height
+     to the same as the button height */
+
+  line-height: 1;
+  text-shadow: 0.05em 0.05em 0.1em #000;
+  text-align: center /* Needed for IE8 */;
+  vertical-align: middle;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  margin-top: -0.5em;
+  width: 100%;
+}
+.vjs-error-display div {
+  position: absolute;
+  bottom: 1em;
+  right: 0;
+  left: 0;
+  font-size: 1.4em;
+  text-align: center;
+  padding: 3px;
+  background: #000000;
+  background: rgba(0, 0, 0, 0.5);
+}
+.vjs-error-display a,
+.vjs-error-display a:visited {
+  color: #F4A460;
+}
 /* Loading Spinner
 --------------------------------------------------------------------------------
 */
 .vjs-loading-spinner {
+  /* Should be hidden by default */
   display: none;
   position: absolute;
   top: 50%;
   left: 50%;
-  font-size: 5em;
+  font-size: 4em;
   line-height: 1;
   width: 1em;
   height: 1em;
   margin-left: -0.5em;
   margin-top: -0.5em;
   opacity: 0.75;
+}
+/* Show the spinner when waiting for data and seeking to a new time */
+.vjs-waiting .vjs-loading-spinner,
+.vjs-seeking .vjs-loading-spinner {
+  display: block;
+  /* only animate when showing because it can be processor heavy */
   /* animation */
   -webkit-animation: spin 1.5s infinite linear;
   -moz-animation: spin 1.5s infinite linear;
   -o-animation: spin 1.5s infinite linear;
   animation: spin 1.5s infinite linear;
 }
+/* Errors are unrecoverable without user interaction so hide the spinner */
+.vjs-error .vjs-loading-spinner {
+  display: none;
+  /* ensure animation doesn't continue while hidden */
+  /* animation */
+  -webkit-animation: none;
+  -moz-animation: none;
+  -o-animation: none;
+  animation: none;
+}
 .vjs-default-skin .vjs-loading-spinner:before {
-  content: "\e00a";
+  content: "\e01e";
   font-family: VideoJS;
   position: absolute;
   top: 0;
@@ -530,10 +657,10 @@ easily in the skin designer. http://designer.videojs.com/
   margin-bottom: 3em;
   border-left: 2em solid transparent;
   border-right: 2em solid transparent;
-  border-top: 1.55em solid #006dcc;
+  border-top: 1.55em solid #000000;
   /* Same width top as ul bottom */
 
-  border-top-color: rgba(0, 109, 204, 0.5);
+  border-top-color: rgba(7, 40, 50, 0.5);
   /* Same as ul background */
 
 }
@@ -555,8 +682,10 @@ easily in the skin designer. http://designer.videojs.com/
   /* background-color-with-alpha */
   background-color: #006dcc;
   background-color: rgba(0, 109, 204, 0.7);
-  /*.box-shadow(-0.2em -0.2em 0.3em rgba(255, 255, 255, 0.2));*/
-
+  /* box-shadow */
+  -webkit-box-shadow: -0.2em -0.2em 0.3em rgba(255, 255, 255, 0.2);
+  -moz-box-shadow: -0.2em -0.2em 0.3em rgba(255, 255, 255, 0.2);
+  box-shadow: -0.2em -0.2em 0.3em rgba(255, 255, 255, 0.2);
 }
 .vjs-default-skin .vjs-menu-button:hover .vjs-menu {
   display: block;
@@ -568,7 +697,7 @@ easily in the skin designer. http://designer.videojs.com/
   line-height: 1.4em;
   font-size: 1.2em;
   text-align: center;
-  text-transform: capitalize;
+  text-transform: lowercase;
 }
 .vjs-default-skin .vjs-menu-button ul li.vjs-selected {
   background-color: #000;
@@ -582,8 +711,10 @@ easily in the skin designer. http://designer.videojs.com/
   /* background-color-with-alpha */
   background-color: #ffffff;
   background-color: rgba(255, 255, 255, 0.75);
-  /*.box-shadow(0 0 1em rgba(255, 255, 255, 1));*/
-
+  /* box-shadow */
+  -webkit-box-shadow: 0 0 1em #ffffff;
+  -moz-box-shadow: 0 0 1em #ffffff;
+  box-shadow: 0 0 1em #ffffff;
 }
 .vjs-default-skin .vjs-menu-button ul li.vjs-menu-title {
   text-align: center;
@@ -601,7 +732,15 @@ easily in the skin designer. http://designer.videojs.com/
 }
 /* Captions Button */
 .vjs-default-skin .vjs-captions-button:before {
-  content: "\e008";
+  content: "\e00c";
+}
+/* Chapters Button */
+.vjs-default-skin .vjs-chapters-button:before {
+  content: "\e00c";
+}
+.vjs-default-skin .vjs-chapters-button.vjs-menu-button .vjs-menu .vjs-menu-content {
+  width: 24em;
+  left: -12em;
 }
 /* Replacement for focus outline */
 .vjs-default-skin .vjs-captions-button:focus .vjs-control-content:before,
@@ -702,11 +841,13 @@ body.vjs-full-window {
   background-position: 50% 50%;
   background-size: contain;
   cursor: pointer;
-  height: 100%;
   margin: 0;
   padding: 0;
-  position: relative;
-  width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 .vjs-poster img {
   display: block;
@@ -729,6 +870,10 @@ body.vjs-full-window {
   left: 1em;
   right: 1em;
 }
+/* Move captions down when controls aren't being shown */
+.video-js.vjs-user-inactive.vjs-playing .vjs-text-track-display {
+  bottom: 1em;
+}
 /* Individual tracks */
 .video-js .vjs-text-track {
   display: none;
@@ -744,7 +889,7 @@ body.vjs-full-window {
   color: #ffffff /* Subtitles are white */;
 }
 .video-js .vjs-captions {
-  color: #ffffff /* Captions are yellow */;
+  color: #ffcc66 /* Captions are yellow */;
 }
 .vjs-tt-cue {
   display: block;
@@ -758,24 +903,24 @@ body.vjs-full-window {
   opacity: 1;
   visibility: visible;
 }
-/* Live Mode
---------------------------------------------------------------------------------
-*/
-.vjs-default-skin.vjs-live .vjs-time-controls,
-.vjs-default-skin.vjs-live .vjs-time-divider,
-.vjs-default-skin.vjs-live .vjs-progress-control {
-  display: none;
+/*  In IE8 w/ no JavaScript (no HTML5 shim), the video tag doesn't register.
+    The .video-js classname on the video tag also isn't considered.
+    This optional paragraph inside the video tag can provide a message to users
+    about what's required to play video. */
+.vjs-no-js {
+  padding: 20px;
+  color: #ccc;
+  background-color: #333;
+  font-size: 18px;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  width: 300px;
+  height: 150px;
+  margin: 0px auto;
 }
-.vjs-default-skin.vjs-live .vjs-live-display {
-  display: block;
-}
-/* Live Display
---------------------------------------------------------------------------------
-*/
-.vjs-default-skin .vjs-live-display {
-  display: none;
-  font-size: 1em;
-  line-height: 3em;
+.vjs-no-js a,
+.vjs-no-js a:visited {
+  color: #F4A460;
 }
 /* -----------------------------------------------------------------------------
 The original source of this file lives at
