Releasing maintenance version 2.5.9
see change log for release notes

--- a/sources/css/storybookPlus.scss
+++ b/sources/css/storybookPlus.scss
@@ -380,6 +380,7 @@ p {
     // SLIDE LOADING SPINNER
     #progressing {
         position: absolute;
+        display: none;
         top: rem( 200px );
         left: rem( 315px );
         width: rem( 30px );
