Minor video container css fix

--- a/sources/css/storybookPlus.scss
+++ b/sources/css/storybookPlus.scss
@@ -491,7 +491,7 @@ p {
     	display: none;
         position: absolute;
         top: rem( 30px );
-        left: 0;
+        left: rem( 1px );
     	width: rem( 640px );
     	height: rem( 360px );
     }
