--- a/sources/css/storybookplus.css
+++ b/sources/css/storybookplus.css
@@ -327,7 +327,7 @@ p {
     display: none;
     position: absolute;
     top: 2.14286rem;
-    left: 0;
+    left: 0.07143rem;
     width: 45.71429rem;
     height: 25.71429rem; }
   #content #quiz {
