--- a/sources/css/storybookPlus.scss
+++ b/sources/css/storybookPlus.scss
@@ -72,8 +72,8 @@ p {
         display: none;
     }
 
-    #toc {
-        height: rem( 400px );
+    #selectable {
+        height: rem( 374px );
     }
 
     #control {
@@ -263,7 +263,7 @@ p {
     #toc {
 
         position: absolute;
-        height: rem( 507px );
+//         height: rem( 507px );
         left: rem( 900px );
         border-left: rem( 3px ) solid $border-color;
         z-index: 13;
@@ -272,6 +272,10 @@ p {
 
             width: rem( 254px );
 
+        }
+
+        #selectable {
+            height: rem( 481px );
         }
 
     }
@@ -803,13 +807,15 @@ p {
 
     position: relative;
 	width: rem( 258px );
-	height: rem( 546px );
+// 	height: rem( 546px );
 	border-bottom: rem( 1px ) solid $border-color;
 	border-right: rem( 1px ) solid $border-color;
 	background-color: #fff;
 	float: left;
+/*
 	overflow-x: hidden;
 	overflow-y: auto;
+*/
 	@include box-sizing( "border-box" );
 
 	* {
@@ -818,11 +824,7 @@ p {
 
     .toc_heading {
 
-        position: -webkit-sticky;
-        position: -moz-sticky;
-        position: -ms-sticky;
-        position: -o-sticky;
-        position: sticky;
+        position: absolute;
         width: rem( 257px );
         background-color: #636363;
         color: #e8e8e8;
@@ -838,10 +840,12 @@ p {
 	#selectable {
 
 	    width: 100%;
+	    height: rem( 520px );
 	    list-style: none;
-    	margin: 0;
+    	margin: rem( 25px ) 0 0 0;
     	padding: 0;
     	overflow-x: hidden;
+    	overflow-y: auto;
     	@include clear;
 
     	li {
