--- a/sources/css/storybookplus.css
+++ b/sources/css/storybookplus.css
@@ -573,14 +573,16 @@ p {
   #toc .toc_heading {
     position: absolute;
     width: 18.35714rem;
-    background-color: #636363;
-    color: #e8e8e8;
+    background-color: #ebebeb;
+    color: #000;
     font-size: 12px;
     text-align: center;
+    font-weight: bold;
     padding: 0.28571rem 0;
-    border-bottom: 0.07143rem #59a8dc solid;
+    border-bottom: 0.07143rem #ccc solid;
     top: 0px;
-    z-index: 10; }
+    z-index: 10;
+    cursor: default; }
   #toc #selectable {
     width: 100%;
     height: 37.14286rem;
