--- a/sources/css/storybookplus.css
+++ b/sources/css/storybookplus.css
@@ -185,13 +185,6 @@ p {
   width: 100%; }
 #storybook_plus_wrapper.magnified #quiz .answerArea input[type=text] {
   width: 100%; }
-#storybook_plus_wrapper.magnified #ap {
-  width: 100%;
-  top: 34rem; }
-  #storybook_plus_wrapper.magnified #ap .mejs-container .mejs-controls .mejs-time-rail {
-    width: 51.14286rem !important; }
-    #storybook_plus_wrapper.magnified #ap .mejs-container .mejs-controls .mejs-time-rail .mejs-time-total {
-      width: 50.42857rem !important; }
 #storybook_plus_wrapper.magnified #vp {
   position: absolute;
   width: 64.28571rem;
@@ -294,13 +287,7 @@ p {
     font-size: 1.14286rem;
     font-weight: bold;
     padding: 0.5rem 1.07143rem 0;
-    background-color: #131313;
-    /*
-            .infoIcn:hover {
-                @include opacity( 1 );
-            	@include single-transition( opacity, ease-in, .3s );
-            }
-    */ }
+    background-color: #131313; }
     #player header #lessonTitle, #player header #instructorName {
       display: inline-block;
       width: 43.57143rem;
@@ -376,17 +363,6 @@ p {
       #content #slide #img img {
         width: 100%;
         height: 25.71429rem; }
-  #content #ap {
-    display: none;
-    position: absolute;
-    width: 45.71429rem;
-    height: 2.14286rem;
-    top: 25.71429rem;
-    background-color: #7e7e7e; }
-    #content #ap .mejs-container .mejs-controls .mejs-time-rail {
-      width: 32.57143rem !important; }
-      #content #ap .mejs-container .mejs-controls .mejs-time-rail .mejs-time-total {
-        width: 31.85714rem !important; }
   #content #vp {
     display: none;
     position: absolute;
