Notes area improvement
Notes tag in XML is no longer needed and ignored. Note button will
display based on the availability of notes.

--- a/sources/css/storybookPlus.scss
+++ b/sources/css/storybookPlus.scss
@@ -131,7 +131,7 @@ p {
 
     #control {
 
-        #currentStatus {
+        .extendStatusWidth {
             width: 64% !important;
         }
 
@@ -265,12 +265,6 @@ p {
             height: rem( 506px ) !important;
     	}
 
-    }
-    
-    #ap {
-        
-        @extend #vp;
-        
     }
 
     #toc {
