added a math class to render math symbol

--- a/sources/css/storybookPlus.scss
+++ b/sources/css/storybookPlus.scss
@@ -866,6 +866,13 @@ p {
             	width: 86%;
             	padding: 0 1%;
             	float: left;
+            	
+            	.math {
+                	
+                	font-family: 'Cambria Math', 'Arial', sans-serif;
+                	
+            	}
+            	
         	}
 
     	}
