--- a/sources/css/storybookplus.css
+++ b/sources/css/storybookplus.css
@@ -99,6 +99,9 @@ p {
   height: 1px;
   overflow: hidden; }
 
+.math {
+  font-family: 'Cambria Math', 'Arial', sans-serif; }
+
 .mobile {
   width: 32.14286rem;
   height: 22.5rem;
@@ -631,8 +634,6 @@ p {
         width: 86%;
         padding: 0 1%;
         float: left; }
-        #toc #selectable li .title .math {
-          font-family: 'Cambria Math', 'Arial', sans-serif; }
     #toc #selectable li:hover {
       background-color: #59a8dc;
       color: #fff; }
